Fixes to pass AppView render tests

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <script>
     backboneReady(() => {
-      new AppView({collection: exampleVideoData}).render();
+      new AppView();
     });
   </script>
 
